# pycwb

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  0.installation_guide.md  1.initialisation_guide.md  2.test_interactive_multistages_2G_analysis.md  3.run_pycwb_with_yaml_config.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  config.ini  config.py  cwb.py  initialisation_guide.md  install.sh  installation_guide.md  pyproject.toml  root_logon.py  root_setup.py  setup.py
archived/: netpixel.py
archived/cwb_wrapper/: __init__.py
archived/event_interface/: middlewares.py
archived/messenger_test/: _handlers.py  _middlewares.py  run.py
benchmark/: README.md  generate_data_for_likelihood.py  performance_test_opt_sky.py  user_parameters_injection.yaml
benchmark/io_performance/: data_gen.py  parquet_perf.py  parquet_read_perf.py  read_pref.py
benchmark/json_performance/: README.md  data_gen.py
benchmark/likelihood/: README.md  benchmark_cpu_vs_gpu.py  data_generator.py  data_generator_native.py  generate_data_for_likelihood.py  perf_cuda.py  performance_test_dpf.py  performance_test_opt_sky.py  user_parameters_injection.yaml  user_parameters_injection_native_1030.yaml  user_parameters_likelihood_test.yaml  workflow_with_new_likelihood.py
benchmark/parquet_perf/: README.md  benchmark_queries.py  generate_params.py  parquet_perf.ipynb  write_parquet.py
benchmark/supercluster/: README.md  generate_data.py  generate_data_2.py  performance_supercluster.py
config/: config.ini  constants.py  schema.json
cwb-core/: Biorthogonal.cc  Biorthogonal.hh  CMakeLists.txt  Daubechies.cc  Daubechies.hh  FourierCoefficients.icc  Haar.cc  Haar.hh  LineFilter.cc  LineFilter.hh  Makefile  Meyer.cc  Meyer.hh  Symlet.cc  Symlet.hh  SymmArray.cc  SymmArray.hh  SymmArraySSE.cc  SymmArraySSE.hh  SymmObjArray.cc  SymmObjArray.hh  WDM.cc  WDM.hh  WDMOverlap.cc  WDMOverlap.hh  WaveDWT.cc  WaveDWT.hh  Wavelet.cc  Wavelet.hh  alm.hh  build.sh  cluster.cc  cluster.hh  coherence.cc  coherence.hh  constants.hh  detector.cc  detector.hh  injection.cc  injection.hh  (+59 more)
cwb-core/cmake/: FindHealpix.cmake  FindeBBH.cmake  install_function.cmake
cwb_wrapper/: __init__.py
cwb_wrapper/constants/: __init__.py
cwb_wrapper/cwb_interface/: cwb_xnet.py
docs/: 0.installation_guide.md  2.test_interactive_multistages_2G_analysis.md  3.run_pycwb_with_yaml_config.md  4.py_cwb_inet_2G.md  5.cwb2G_analyse.md  6.wat_codes_notes.md  diagram.py  requirements.txt
docs/dev/: Plans_to_review.md  mr_description_guide.md  review_guide.md
docs/likelihood/: likelihoodWP.md  likelihoodWPGPU_bottleneck_report.md
docs/source/: analysis_recipes.rst  choose_your_path.rst  cli_reference.rst  clustering_algorithm.rst  conf.py  config_repository.rst  coordinate_systems.rst  core_concepts.rst  credit.rst  cwb_heritage.rst  decision_guides.rst  dev_architecture.rst  dev_build_test.rst  dev_contributing.rst  dev_cxx_core.rst  dev_modules.rst  dev_performance.rst  dev_setup.rst  glossary.rst  index.rst  injection_infrastructure.rst  install.rst  job_control.rst  likelihood_guide.rst  mod_cwb.rst  modules_guide.rst  package.rst  pipeline_lifecycle.rst  postproduction.rst  postproduction_actions.rst  postproduction_background.rst  postproduction_efficiency.rst  postproduction_trainingset.rst  postproduction_workflow.rst  postproduction_xgboost.rst  public_gwtc_references.rst  run_on_clusters.rst  schema.rst  standard_analysis.rst  start_here.rst  (+8 more)
envs/: Dockerfile  Dockerfile.ci  Dockerfile.ci-conda  Dockerfile.ci-native  environment.yml  pycwb.def
envs/mamba/: Dockerfile
examples/GW190521_search/: README.md  user_parameters.yaml
examples/autoencoder/: pycwb_injection.ipynb  user_parameters_injection.yaml
examples/batch_injection/: generate_parameters.py  pycwb_injection.py  user_parameters_injection.yaml  user_parameters_injections.yaml
examples/benchmark/: pyburst_mdc.py  pycwb_mdc.py  user_parameters_mdc.yaml
examples/catalog/: process_data.md
examples/colab/: GW150914.ipynb  pycWB_GW150914.ipynb
examples/cwb_results_conversion/: convert_root_to_parquet.py  train_xgb.py  xgb_config.py
examples/data_injection/: README.md  injection_parameters.py  user_parameters.yaml
examples/gwosc/: user_parameters.yaml
examples/injection/: pyburst_injection.ipynb  pyburst_injection.py  pycwb_injection.ipynb  user_parameters_injection.yaml
examples/injection_with_coordinate_system/: injection_module_test.ipynb
examples/lvk_sep_2023/: demo.ipynb  user_parameters.yaml
examples/multiple_injection/: user_parameters_injection.yaml
examples/new_injection_infra_with_LHV/: README.md  analyze_events.ipynb  user_parameters.yaml
examples/new_injection_infra_with_gaussian_noise/: README.md  injection_parameters.py  user_parameters.yaml
examples/new_injection_infra_with_real_data/: README.md  user_parameters.yaml
examples/new_injection_infra_with_sky_patch/: README.md  analyze_events.ipynb  user_parameters.yaml
examples/online_shm_run/: README.md  _test_integration.py  _test_pipeline.py  debug_run.sh  fake_data_generator.py  online_schema_extension.yaml  run.sh  user_parameters.yaml  user_parameters_debug.yaml
examples/postproduction/: standard_analysis_10pct_workflow.yaml  waveform_reconstruction_workflow.yaml
examples/pycwb_cwb_consistency/: README.md  (+1 more)
messenger/: __init__.py  server.py
messenger-web-interface/: package-lock.json  package.json
messenger_test/: _config.py  _handlers.py  run.py
prototypes/: search.yaml
pyburst/: __init__.py  _version.py  search.py
pycWB/: __init__.py  cwb_interface.py
pycwb/: __init__.py  _version.py  search.py  user_parameters.py
pycwb_eda/: _config.py  _handlers.py  config.py  example.py
tests/: new_pycwb_test.py  pyburst_mdc_test.ipynb  pyburst_mdc_test.py  pycwb_mdc_test.py  pycwb_module_test.ipynb  pycwb_test.py  test.ipynb  user_parameters.yaml  user_parameters_mdc.yaml  user_parameters_online.yaml  wdm_test.ipynb
tools/: warm_numba_cache.py
wdm/: fourier_coeff.py  wdm.py
web-viewer/: event_dump.html  viewer.html
(+758 files in other folders)
