[build-system]
requires = [ "setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pycWB"
keywords=['ligo', 'physics', 'gravity', 'signal processing', 'gravitational waves', 'cwb', 'coherent wave burst']
authors= [
    {name = "The pycWB team", email = "xusmailbox@gmail.com"},
]
description= "A Python package for coherent gravitational wave burst analysis"

requires-python = ">=3.8"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools_scm]
write_to = "pycwb/_version.py"